# talk-to-your-pdf

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
pdf-app/: docker-compose-no-ollama.yaml  docker-compose.yaml  ollama_entrypoint.sh
pdf-app/app/: constants.py  embedding_models.py  main.py  retriever.py  transform.py  upload.py  vector_db.py
pdf-app/backend/: Dockerfile  requirements.txt
pdf-app/backend/app/: backend_main_deps.txt  constants.py  embedding_models.py  main.py  retriever.py  upload.py  vector_db.py
pdf-app/client/: Dockerfile  index.py  requirements.txt
simple_openai_rag/: main.py
